Fixing small Gap issue

--- a/chili/src/components/Header.css
+++ b/chili/src/components/Header.css
@@ -1,6 +1,12 @@
 /* Header component styles */
+html, body {
+    margin: 0;
+    padding: 0;
+  }
+
 .header {
   border-radius: 0px 0px 0px 0px;
+  box-sizing: border-box;
 }
 
 .header-container {
@@ -78,7 +84,6 @@
   flex-basis: auto;
 }
 
-/* Workers column */
 .workers-column {
   display: flex;
   flex-direction: column;
